Dummy_Package_for_scratch_org/main/default/objects/Continuous_Integration__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <defaultValue>&quot;master&quot;</defaultValue>
    <label>Branch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>