Dummy_Package_for_scratch_org/main/default/objects/Continuous_Integration__c/fields/Check_Only__c.field-meta.xml
<CustomField>
    <fullName>Check_Only__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Check Only</label>
    <type>Checkbox</type>
</CustomField>