Dummy_Package_for_scratch_org/main/default/objects/Continuous_Integration__c/fields/Destination_Org_Credential__c.field-meta.xml
<CustomField>
    <fullName>Destination_Org_Credential__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destination Credential</label>
    <referenceTo>Org__c</referenceTo>
    <relationshipLabel>Continuous Integrations</relationshipLabel>
    <relationshipName>Continuous_Integrations</relationshipName>
    <type>Lookup</type>
</CustomField>