Dummy_Package_for_scratch_org/main/default/objects/Continuous_Integration__c/fields/Files_to_be_deployed__c.field-meta.xml
<CustomField>
    <fullName>Files_to_be_deployed__c</fullName>
    <inlineHelpText>For supported metadata items only.</inlineHelpText>
    <label>Files to be deployed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Deploy all Files</fullName>
                <default>true</default>
                <label>Deploy all Files</label>
            </value>
            <value>
                <fullName>Deploy only Committed Files</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>