Dummy_Package_for_scratch_org/main/default/objects/Continuous_Integration__c/fields/Last_Build_Task_Duration__c.field-meta.xml
<CustomField>
    <fullName>Last_Build_Task_Duration__c</fullName>
    <label>Last Build Task Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>