Dummy_Package_for_scratch_org/main/default/objects/Continuous_Integration__c/fields/Post_Failed_Deployment_Jobs__c.field-meta.xml
<CustomField>
    <fullName>Post_Failed_Deployment_Jobs__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Post Failed Deployment Jobs</label>
    <referenceTo>Deployment__c</referenceTo>
    <relationshipLabel>Continuous Integrations (Post Failed Deployment Jobs)</relationshipLabel>
    <relationshipName>Post_Failed_Continuous_Integrations</relationshipName>
    <type>Lookup</type>
</CustomField>