Dummy_Package_for_scratch_org/main/default/objects/Continuous_Integration__c/fields/Pre_Deployment_Jobs__c.field-meta.xml
<CustomField>
    <fullName>Pre_Deployment_Jobs__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pre Deployment Jobs</label>
    <referenceTo>Deployment__c</referenceTo>
    <relationshipLabel>Continuous Integrations</relationshipLabel>
    <relationshipName>Pre_Continuous_Integrations</relationshipName>
    <type>Lookup</type>
</CustomField>