Dummy_Package_for_scratch_org/main/default/objects/Continuous_Integration__c/fields/Run_All_Tests__c.field-meta.xml
<CustomField>
    <fullName>Run_All_Tests__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this checkbox is checked, all apex tests will be run as part of the build.</inlineHelpText>
    <label>Run All Tests</label>
    <type>Checkbox</type>
</CustomField>