Dummy_Package_for_scratch_org/main/default/objects/Continuous_Integration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Status__c</columns>
    <columns>Files_to_be_deployed__c</columns>
    <columns>Branch__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>